fixed some margin issues on mobile and desktop

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -39,6 +39,9 @@ li {
         justify-content: center;
         font-size: 4em;
     }
+    h2 {
+        margin-left: 0.25em;
+    }
     li {
         display: flex;
         justify-content: center;
@@ -58,14 +61,13 @@ li {
     nav ul li{
         background: lightgrey;
         width: 100%;
-        margin: 5px;
         padding-top: .75em;
         padding-bottom: .75em;
         font-size: 1.25em;
     }
     img {
         display: block;
-        margin: auto;
+        margin: 1em auto;
         width: 100%;
     }
     .main {
@@ -117,5 +119,8 @@ li {
     h2 {
         margin: auto;
         padding-bottom: 1em;
+    }
+    p {
+        margin: auto;
     }
 }
